Disabled scroll functionality when clicking on interactable block types.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: TeleportScrolls
 version: ${project.version}
+api-version: 1.13
 main: com.colin.teleportscrolls.TeleportScrolls
 authors: [Surfcash]
 description: Plug and play teleport scrolls with uses
